<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImgPro</string>
    <string name="Undo">Undo</string>
    <string name="action_settings">Settings</string>
    <string name="Redo">Redo</string>
    <string name="Greyscale">Greyscale</string>
    <string name="Open">Open</string>
    <string name="Save">Save</string>
    <string name="Invert">Invert</string>
    <string name="DetectEdges">Detect Edges</string>
    <string name="Sepia">Sepia</string>
    <string name="Contrast">Contrast</string>
    <string name="Brightness">Brightness</string>
    <string name="Sharpen">Sharpen</string>
    <string name="Relief">Relief</string>
    <string name="Gaussian_Blur">Blur</string>
    <string name="About">About</string>
    <string name="Apply">Apply</string>
    <string name="Cancel">Cancel</string>
    <string name="Effects">Effects</string>
    <string name="Filters">Filters</string>
    <string name="aboutDescription">    ImgPro v1.0\n\nDeveloped by YANIS Boussad\nContact:    boussadyanis@gmail.com\n2015</string>
    <string name="title_activity_about">About</string>

</resources>
